RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/45_0003/45_merged.txt
/home/dimpling/AutoSpec/out/45_0003/45_merged.c:48:3: error: unterminated comment
   48 |   /* Loop invariant for the first while loop */;
      |   ^
